--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "vue-net",
-  "version": "0.1.0",
+  "name": "form",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vitejs/plugin-vue": "^4.2.3",
+    "vite": "^4.4.6"
   }
 }
